--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,19 @@ code {
     monospace;
 }
 
+.card {
+  background-color: #0c071b;
+  box-shadow: rgb(215, 106, 255, 0.507) 0px 0px 20px;
+  padding: 1rem;
+  border-radius: 5px;
+}
+.techStack {
+  color: #c24dd0;
+  border: 2px solid #c24dd0;
+  padding: 0.5rem 2rem;
+  /* background-image: linear-gradient(150deg, #c24dd0, #7a72fa); */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
