--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@ code {
   /* background-image: linear-gradient(150deg, #c24dd0, #7a72fa); */
 }
 
+.customButton {
+  background-image: linear-gradient(150deg, #c24dd0, #ff005d);
+  color: white;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
